[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Zombie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Fondo.png" type="Texture" id=5]
[ext_resource path="res://Casa.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fondo-juego.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.3284, -1.0508, 0, 0, 0, 0, 480.358, -1.68076, 0, 0, 0, 0, 480.737, 716.594, 0, 0, 0, 0, -1.14038, 715.259, 0, 0, 0, 0, 0.3284, -1.0508 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Zombie = ExtResource( 2 )

[node name="Fondo - Inicio" type="Sprite" parent="."]
visible = false
position = Vector2( 239.986, 359.304 )
scale = Vector2( 0.301402, 0.347662 )
texture = ExtResource( 5 )

[node name="Fondo - juego" type="Sprite" parent="."]
position = Vector2( 259.668, 357.6 )
scale = Vector2( 0.900669, 1.20542 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
speed = 270

[node name="Casa" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Zombie" parent="." instance=ExtResource( 2 )]
position = Vector2( -56, 80 )

[node name="ZombieTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 241.905, 274.663 )

[node name="ZombiePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="ZombieSpawnLocation" type="PathFollow2D" parent="ZombiePath"]
position = Vector2( 0.3284, -1.0508 )
rotation = -0.0013123

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="ZombieTimer" to="." method="_on_ZombieTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
